--- a/wp-content/themes/foundations-child/style.css
+++ b/wp-content/themes/foundations-child/style.css
@@ -10,7 +10,6 @@ License: GNU General Public License
 License URI: license.txt
 Text Domain: foundations
 Tags:  right-sidebar, custom-background, custom-header, custom-menu, featured-images, theme-options, threaded-comments, custom-logo, blog, full-width-template
-
 Foundations is based on Underscores theme(Underscores is distributed under the terms of the GNU GPL v2 or later).
 Foundations WordPress Theme has been created by Flythemes(flythemes.net), 2018.
 Foundations WordPress Theme is released under the terms of GNU GPL
@@ -43,210 +42,83 @@ body {
     background-color: #7d7b7b14; 
 }
 
-/* Dropdown Navigation ↓*/
-
-.main-nav ul {
-    margin: 0px 0 0 0;
-    margin-top: 0px;
-    margin-right: auto;
-    margin-bottom: 0px;
-    margin-left: auto;
-    padding: 1px 0 0 0;
-    padding-top: 1px;
-    padding-right: 0px;
-    padding-bottom: 0px;
-    padding-left: 0px;
-    float: none;
+/* default Navigation */
+#header .main-nav ul li a { 
+	font:700 14px 'Montserrat'; 
+	color:#858484;
 }
 
-.main-nav {
-    width: 500px;
-    margin: 35px auto 0 auto;
-    text-align: center;
+@media screen and (min-width:1000px){
+	.main-nav ul { 
+		margin:0 0 0 0; 
+		padding:0px 0 0 0; 
+		float:right;
+	}
+	.main-nav ul li { 
+		list-style:none; 
+		display:inline-block;  
+		position:relative; 
+		padding:10px 0;
+	}
+	.main-nav ul li ul { 
+		display:none; 
+		width:190px; 
+	}
+	.main-nav ul li a { 
+		text-decoration:none; 
+		padding:13px 11px; 
+		text-align:left; 
+		text-transform:uppercase;
+	}
+	.main-nav ul li a:hover { 
+		text-decoration:none;
+		border-bottom:2px solid #f7b200;
+	}
+	.main-nav ul li:hover ul {
+		display:block; 
+		position:absolute; 
+		z-index:99; 
+		padding:0; 
+		top:42px; 
+		background-color:#f1f1f1;
+	}
+	.main-nav ul li:hover ul li {
+		display:block; 
+		padding-bottom:0; 
+		padding-top:0;
+	}
+	.main-nav ul li:hover ul li a { 
+		padding:0 0 0 14px;  
+		border-top:0; 
+		text-transform:capitalize; 
+	}
+	.main-nav ul li:hover ul li ul { 
+		display:none; 
+	}
+	.main-nav ul li:hover ul li:hover ul { 
+		display:block; 
+		position:absolute;
+		z-index:999; 
+		padding:0px 0px; 
+		left:100%; 
+		top:0%; 
+	}
+	.main-nav ul li:hover ul li:hover ul li { 
+		display:block;
+	}
+	#header .main-nav ul li ul li:last-child a{ 
+		border-bottom:none;
+	}
+	#header .main-nav ul li ul li a {
+		display: block;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	.main-nav ul li.current_page_item a{
+		border-bottom:2px solid #f7b200;
+	}
+	
+	#header .logo{float:left; }
 }
+/* default Navigation */
 
-
-.menu-global-container {
-    padding: 0;
-    list-style: none;
-}
-
-.menu-global-container {
-    display: inline-block;
-    margin-right: 25px;
-}
-
-.menu-global-container:last-child {
-    margin-right: 0;
-}
-
- .menu-item-object-custom,
- .menu-item-object-custom:link, 
- .menu-item-object-custom:visited,
- .menu-item-object-custom:active,
-
- .menu-item-object-page,
- .menu-item-object-page:link, 
- .menu-item-object-page:visited,
- .menu-item-object-page:active,
-
- .sub-menu, 
- .sub-menu:link,
- .sub-menu:visited,
- .sub-menu:active {
-  
-    position: relative;
-    font-size: 14px;
-    letter-spacing: 1px;
-    cursor: pointer;
-    text-decoration: none;
-    outline: none;
-}
-
- .menu-item-object-custom,
- .menu-item-object-custom:link, 
- .menu-item-object-custom:visited,
- .menu-item-object-custom:active,
-
- .menu-item-object-page,
- .menu-item-object-page:link, 
- .menu-item-object-page:visited,
- .menu-item-object-page:active {
-    color: #fff;
-    font-weight: bold;
-}
- .menu-item-object-custom::before,
- .menu-item-object-page::before {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    height: 3px;
-    background: rgba(0,0,0,0.2);
-    opacity: 0;
-    -webkit-transform: translate(0, 10px);
-    transform: translate(0, 10px);
-    transition: opacity 0.3s ease, transform 0.3s ease;
-}
-
- .menu-item-object-custom:hover::before,
- .menu-item-object-custom:hover::before,
-
- .menu-item-object-page::before,
- .menu-item-object-page::before {
-    opacity: 1;
-    -webkit-transform: translate(0, 5px);
-    transform: translate(0, 5px);
-}
-
-.parent {
-    position: relative;
-}
-
-.parent
- .menu-item-object-custom,
-.parent
- .menu-item-object-page {
- padding-right: 15px;
-    height: 17px;
-    line-height: 17px;
- }
- 
- .parent
- .menu-item-object-custom::after,
-.parent
- .menu-item-object-page::after {
- 
- content: "";
-    position:absolute;
-    top: 6px;
-    right: 0;
-    border: 5px solid transparent;
-    border-top-color: #fff;
-    
- }
-.sub-menu {
- 
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    z-index: 100;
-    width: 200px;
-    margin-left: -100px;
-    background: #fff;
-    border-radius: 3px;
-    line-height: 1.46667;
-    margin-top: -5px;
-    box-shadow: 0 0 8px rgba(0,0,0,.3);
-    /* opacity:0; */
-    -webkit-transform: translate(0, 0) scale(.85);
-    transform: translate(0, 0)scale(.85);
-    transition: transform 0.1s ease-out, opacity 0.1s ease-out;
-    pointer-events: none
-
- }
- 
-.sub-menu::after, 
-.sub-menu::before {
-    content: ""; 
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    margin-left: -10px;
-    border: 10px solid transparent;
-    height: 0;
-}
-
-.sub-menu::after {
-    border-bottom-color: #fff;
-}
-
-.sub-menu::before {
-    margin-left: -13px;
-    border: 13px solid transparent;
-    border-bottom-color: rgba(0,0,0,.1);
-    -webkit-filter:blur(1px);
-    filter:blur(1px);
-}
-
-
-
-.menu-item-type-custom
-.menu-item-type-post_type
- {
-    list-style: none;
-    padding: 10px 0;
-}
-
-.menu-item-object-post {
-    display: block;
-    text-align: left;
-}
-
-.menu-item-type-post_type,
-.menu-item-type-post_type:link, 
-.menu-item-type-post_type:visited, 
-.menu-item-type-post_type:active {
-    color: #3498db;
-    padding: 10px 20px;
-}
-
-.menu-item-object-post:hover {
-    text-decoration: underline;
-}
-
-.submenu-seperator {
-    height: 0;
-    margin: 12px 10px;
-    border-top: 1px solid #eee;
-}
-
-.show-submenu .sub-menu {
-    opacity: 1;
-    -webkit-transform: translate(0, 25px) scale(1);
-    transform: translate(0, 25px) scale(1);
-    pointer-events: auto;
-}
-
-/* Dropdown Navigation ↑*/
