--- a/wp-content/themes/foundations-child/style.css
+++ b/wp-content/themes/foundations-child/style.css
@@ -21,15 +21,67 @@ body {
 }
 
 .header-inner {
-    width: 1600px;
-    height: 400px;
+    width: 821px;
+    height: 191px;
     margin: 0 auto;
 }
+
+#header .logo {
+    padding: 0px;
+    z-index: 99;
+    margin-top: 30px;
+    width: max-content;
+    vertical-align: middle;
+    font-size: 25px;
+}
+
+
+}
+
+
+
 
 /* Page */
 
 html {
     box-sizing: border-box;
+}
+
+
+.container {
+    width: 970px;
+}
+
+.container {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+
+    float: left;
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+body, p, h1, h2, h3, h4, h5, h6 {
+    font-family: Noto, Hiragino Sans,Helvetica,Arial,sans-serif;
+    text-rendering: optimizeLegibility;
+    background: transparent;
+    -webkit-font-smoothing: antialiased;
+    line-height: 2;
+}
+
+.col-sm-10 > p {
+    margin: 30px 0px 0px;
+    padding-left: 0px;
+    padding-right: 26px;
+    line-height: 2;
 }
 
 *, 
@@ -42,6 +94,17 @@ body {
     background-color: #7d7b7b14; 
 }
 
+
+#header .logo {
+    padding: 0px;
+    z-index: 99;
+    margin-top: 30px;
+    padding-bottom: 50px;
+    width: max-content;
+    vertical-align: middle;
+    font-size: 25px;
+}
+
 /* default Navigation */
 #header .main-nav ul li a { 
 	font:700 14px 'Montserrat'; 
@@ -52,7 +115,7 @@ body {
 	.main-nav ul { 
 		margin:0 0 0 0; 
 		padding:0px 0 0 0; 
-		float:right;
+		float: initial;
 	}
 	.main-nav ul li { 
 		list-style:none; 
@@ -122,3 +185,97 @@ body {
 }
 /* default Navigation */
 
+#header .main-nav {
+    background: #222222;
+    margin-top: 10px;
+    padding-top: 13px;
+    padding-bottom: 9px;
+}
+
+.menu-global-container {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+#header .header-inner  {
+	height: auto;
+    width: 100%;
+}
+
+
+.main-nav ul li:hover ul {
+	line-height: 60px;
+    color: #333;
+    
+
+}
+
+@media screen and (min-width: 1000px)
+#header .main-nav ul li ul li a {
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+
+
+.main-nav ul li:hover ul {
+    display: block;
+    position: absolute;
+    z-index: 1000;
+    padding: 5px 0;
+    top: 100%;
+    background-color: #fff;
+    float: left;
+    min-width: 160px;
+    margin: 2px 0 0;
+    list-style: none;
+    font-size: 14px;
+    text-align: left;
+    border: 1px solid #ccc;
+    border: 1px solid rgba(0,0,0,0.15);
+    border-radius: 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,0.175);
+    box-shadow: 0 6px 12px rgba(0,0,0,0.175);
+    background-clip: padding-box
+
+
+}
+
+.nav {
+    margin-bottom: 0;
+    padding-left: 0px;
+    list-style: none;
+}
+    
+/*
+*/
+@media screen and (max-width: 999px) and (min-width: 720px)
+#header .logo {
+    padding: 0px;
+    z-index: 99;
+    margin-top: 30px;
+    padding-bottom: 50px;
+    width: max-content;
+    vertical-align: middle;
+    font-size: 25px;
+}
+
+
+.col-sm-2, .col-xs-10 {
+   float: unset;
+    position: relative;
+    min-height: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+@media screen and (max-width: 999px) and (min-width: 720px)
+.col-sm-10 > p {
+    margin: 0px 0px 0px;
+    padding-left: 0px;
+    padding-right: 26px;
+    line-height: 2;
+}
