--- a/wp-content/themes/hokutoblog-child/style.css
+++ b/wp-content/themes/hokutoblog-child/style.css
@@ -77,7 +77,7 @@ hr pre
 /*--------------------------------------------------------------
 CAN INLINE
 b bdo big cite code dfn em i kbd label q samp small span
-strong sub sup tt var 
+strong sub sup tt var
 --------------------------------------------------------------*/
 
 /*
@@ -101,7 +101,7 @@ http://kachibito.net/wordpress/theme-development-flow.html#02
 
 
 
-/*１．男性・技術系・知識・明快さ・ブログ*/ 
+/*１．男性・技術系・知識・明快さ・ブログ*/
 /*一般的なブログを作りたい。*/
 /*参考：http://tefutefu.info/*/
 
@@ -115,25 +115,25 @@ http://kachibito.net/wordpress/theme-development-flow.html#02
 #masthead {
     display: block;
 	background-color: azure;
-	
+
 }
 .entry-header {
     display: block;
 	background-color: #f1f1f1;
-	
+
 }
 .entry-footer {
     display: block;
 	background-color: #aaa;
-	
+
 }
 .site-info {
     display: block;
 	background-color: #b2b2b2;
-	
+
 }
 
-/* BODY */ 
+/* BODY */
 
 body {
     font-family: "Open Sans", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN W3", "メイリオ", Meiryo, sans-serif;
@@ -157,13 +157,73 @@ body {
     background-color: #00b9eb2e;
 }
 
+.site-title {
+	padding-left: 21px;
+
+}
+
+* {
+	text-decoration: none;
+}
+
+
 /* -----------------NAVBAR----------------- */
 
-.main-navigation.bt-navbar-bootcamp {
-    height: 22px;
-    background-color: #333;
+.navbar.bt-navbar-bootcamp {
+    height: 70px;
+    /* background-color: #333; */
     border: none;
 }
+.navbar {
+    margin: 0;
+    padding: 0;
+    border: none;
+    border-radius: none;
+    width: 100%;
+    height: 70px;
+    z-index: 1000;
+}
+.navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px;
+}
+.navbar-fixed-top, .navbar-fixed-bottom {
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    display: -webkit-flex;
+    display: contents;
+    -webkit-align-items: center;
+    align-items: center;
+}
+.navbar {
+    position: relative;
+    min-height: 70px;
+    margin-bottom: 21px;
+    border: 1px solid transparent;
+}
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+    display: block;
+    }
+.main-navigation.bt-navbar-bootcamp {
+    height: 22px;
+    /* background-color: #333; */
+    border: none;
+}
+
+/* ----------------- */
+.navbar:before, .navbar:after {
+    content: " ";
+    display: table;
+}
+
+*, *:before, *:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+/* ----------------- */
 
 .main-navigation {
     margin: 0;
@@ -173,6 +233,34 @@ body {
     width: 100%;
     height: 70px;
     z-index: 1000
+
+}
+
+
+.menu-toggle, .main-navigation.toggled ul {
+ padding-left: 21px;
+}
+
+
+.main-navigation ul li:hover > ul, .main-navigation ul li.focus > ul {
+    left: auto;
+    background-color: rgba(12, 233, 255, 0.88);
+}
+
+li[class*="menu-item"] {
+ padding-left: 21px;
+}
+
+a::before {
+ padding-left: 21px;
+} 
+
+
+ li {
+    display: block;
+    text-decoration: none;
+    padding-left: 5px;
+    padding-top: 10px;
 }
 
 .navbar-fixed-top {
@@ -188,8 +276,64 @@ body {
 }
 
 .navbar-fixed-top, .navbar-fixed-bottom {
-    position: fixed;
+    /* position: fixed; */
     right: 0;
     left: 0;
     z-index: 1030;
+}
+
+/* .navbar-inner */
+
+.navbar-inner {
+	position: relative;
+	max-width: 1200px;
+	/* margin: 15px;  */
+}
+
+ @media (max-width: 1023px) {
+.navbar .navbar-inner {
+    padding-right: 0;
+    padding-left: 0;
+	}
+}
+
+ .navbar .navbar-inner {
+    position: relative;
+    max-width: 1200px;
+    margin: auto;
+}
+
+ @media (max-width: 1200px) {
+.navbar-inner {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+}
+/* button */
+
+button, input[type="button"], input[type="reset"], input[type="submit"] {
+    border: 1px solid;
+    border-color: #ccc #ccc #bbb;
+    border-radius: 3px;
+    background: #e6e6e6;
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 12px;
+    font-size: 0.75rem;
+    line-height: 1;
+    padding: .6em 1em .4em;
+    float: right;
+}
+body, button, input, select, optgroup, textarea {
+    color: #404040;
+    font-family: sans-serif;
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+button, [type="button"], [type="reset"], [type="submit"] {
+    -webkit-appearance: button;
+}
+button, select {
+    text-transform: none;
 }
